--- a/addons/manage/views/developer.xml
+++ b/addons/manage/views/developer.xml
@@ -1,13 +1,41 @@
 <odoo>
     <data>
-     
+        <record model="ir.ui.view" id="manage.devs_partner_from">
+            <field name="name">manage devs form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"></field>
+            <field name="mode">primary</field>
+            <field name="arch" type="xml">
+                <xpath expr="//sheet/notebook/page[@name='internal_notes']" position="after">
+                    <group>
+                        <group>
+                            <field name="technologies"/>
+                        </group>
+                    </group>
+                </xpath>
+            </field>
+        </record>
+
         <record model="ir.actions.act_window" id="manage.action_developer_window">
             <field name="name">manage developer window</field>
             <field name="res_model">res.partner</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        
+        <record model="ir.actions.act_window.view" id="manage.action_developer_tree">
+            <field name="sequence" eval="1"></field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="base.view_partner_tree"></field>
+            <field name="act_window_id" ref="manage.action_developer_window"></field>
+        </record>
+        <record model="ir.actions.act_window.view" id="manage.action_developer_form">
+            <field name="sequence" eval="2"></field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="base.view_partner_form"></field>
+            <field name="act_window_id" ref="manage.action_developer_window"></field>
+        </record>
+
+
 
         <menuitem name="Devs" id="manage.menu_1_devs_list" parent="menu_manage_raiz"
             action="manage.action_developer_window"/>
